# typed-grid-rs

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md
.github/: dependabot.yml  rust-problems.json
.github/workflow/: rust.yml
.github/workflows/: rust.yml
samples/: Cargo.toml
samples/src/: main.rs  typed_grid_ext_eg.rs  typed_grid_move_eg.rs
typed_grid/: Cargo.toml  README.md  build.rs
typed_grid/src/: lib.rs
typed_grid_macro/: Cargo.toml  README.md
typed_grid_macro/src/: input.rs  lib.rs  with_ext.rs  with_traits.rs
