[workspace]
resolver = "2"
members = ["typed_grid", "typed_grid_macro", "samples"]
default-members = ["typed_grid", "typed_grid_macro"]

[workspace.package]
version = "0.1.0"
authors = ["Tomislav Grospić <grospic@gmail.com>"]
edition = "2024"
homepage = ""
repository = "https://github.com/tgrospic/typed-grid-rs"
rust-version = "1.85"
description = "Macro generator for typed grid navigation"
license-file = "LICENSE"

[workspace.dependencies]
typed_grid = { path = "typed_grid" }
typed_grid_macro = { version = "0.1", path = "typed_grid_macro" }

derive-new = "0.7"
extend = "1"
itertools = "0.14"
proc-macro2 = "1"
quote = "1"
syn = "2"

[workspace.metadata.release]
push = true # push git tags to remote
tag = true  # creates Git tag for version
allow-branch = ["master"]
sign-commit = true
sign-tag = true
consolidate-commits = true
