[package]
name = "samples"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true
license-file.workspace = true

[dependencies]
typed_grid.workspace = true

extend.workspace = true
