[package]
name = "typed_grid"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
typed_grid_macro.workspace = true

derive-new.workspace = true
