[package]
name = "typed_grid_macro"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
license-file.workspace = true

[lib]
proc-macro = true

[dependencies]
itertools.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
